--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit==1.25.0
-ultralytics==8.3.8
-torch==2.0.1
-torchvision==0.15.2
-Pillow==12.0.1
-numpy==1.25.0
-matplotlib==3.7.2
+# Interface web
+streamlit==1.51.0
+
+# YOLO et dépendances
+ultralytics==8.1.4
+opencv-python-headless==4.8.1.78
+Pillow==10.0.0
+numpy==1.25.2
+torch==2.1.0
 pandas==2.1.1
-opencv-python-headless==4.9.0.80
